2002-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am: enable libprintf_flt.a.
	* include/stdio.h: explain floating point printf().
	* libc/stdio/Makefile.am: enable libprintf_flt.a.
	* libc/stdio/stdio_private.h: define values for PRINTF_LEVEL.
	* libc/stdio/vfprintf.c: implement optional floating point support.

2002-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/ctype.S: cleanup empty comments.
	* libc/stdlib/ctype.S: add CVS Id.
	* libc/stdlib/ctype.S: rename cty_is* into __ctype_is*.
	* libc/stdlib/ctype.S: ispunct(): encapsulate func. calls using _U().

2002-11-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Don't recurse into doc dir while building unless
	"--enable-doc is passed to configure. This allows a default build to
	bypass building the docs, but still allows the user to cd into the doc
	dir and build the docs if they feel lucky. Do you feel lucky, punk?

2002-11-18  Theodore A. Roth  <troth@openavr.org>

	* libc/string/memcmp.S: Add note about unsigned nature of compare.

2002-11-18  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/inline_asm.dox: Update URL for project.
	Remove link to Rich Neswold's document since it is now (mostly) merged
	in with avr-libc.
	* doc/api/main_page.dox: Update URL for project.
	Update avr-libc-dev list address.
	Add note about avr-gcc mailing list.

2002-11-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Use -j .text -j .data for avr-objcopy.
	* doc/examples/demo/demo.dox: Ditto.

2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* doc/api/faq.dox: Add \code and \endcode around example. D'oh!
	* doc/api/using-tools.dox: Use \verbatim instead of <code>.
	* include/avr/pgmspace.h: Put both #includes in a single \code statement.

2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.